fix constant string too long issue by not replacing new lines with empty space. The new lines are compressed anyway by gzip

--- a/wro4j-core/src/test/resources/ro/isdc/wro/model/resource/processor/jawrcss/expected/media2.css
+++ b/wro4j-core/src/test/resources/ro/isdc/wro/model/resource/processor/jawrcss/expected/media2.css
@@ -1,1 +1,2 @@
-@media only screen and (max-width:767px){.container{width:768px;}.container .column, .container .columns{margin-left:10px;margin-right:10px;}}
+@media only screen and (max-width:767px){.container{width:768px;}.container .column, 
+ .container .columns{margin-left:10px;margin-right:10px;}}
